# insurance-governance

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  run_discrimination_coverage_tests.py  run_expansion_tests_v3.py  run_outcome_tests_databricks.py  run_tests_databricks.py
.github/workflows/: ci.yml  docs.yml
benchmarks/: benchmark_insurance_governance.py
examples/: quickstart.py
notebooks/: benchmark.py  benchmark_fremtpl2.py  outcome_testing_demo.py  quickstart.ipynb
src/insurance_governance/: __init__.py
src/insurance_governance/audit/: __init__.py  customer_explanation.py  entry.py  log.py  report.py  shap_explainer.py
src/insurance_governance/euaia/: __init__.py  article13.py  classifier.py  conformity.py  renderer.py
src/insurance_governance/mrm/: __init__.py  inventory.py  model_card.py  scorer.py
src/insurance_governance/outcome/: __init__.py  framework.py  metrics.py  report.py  results.py  segments.py
src/insurance_governance/outcome/templates/: outcome_report.html.j2
src/insurance_governance/validation/: __init__.py  data_quality.py  discrimination.py  model_card.py  performance.py  report.py  stability.py  validation_report.py
src/insurance_governance/validation/templates/: report.html.j2
tests/: test_audit.py  test_batch24_coverage.py  test_coverage_expansion.py  test_data_quality.py  test_data_quality_coverage.py  test_discrimination_coverage.py  test_discrimination_extended.py  test_euaia.py  test_fairness_audit.py  test_fairness_bias_metrics.py  test_fairness_utils.py  test_gaps.py  test_inventory.py  test_mrm_model_card.py  test_mrm_report.py  test_outcome_framework.py  test_outcome_metrics.py  test_outcome_report.py  test_outcome_results.py  test_outcome_segments.py  test_p1_regression.py  test_performance.py  test_performance_extended.py  test_results.py  test_scorer.py  test_scorer_coverage.py  test_stability.py  test_validation_model_card.py  test_validation_report.py  test_validation_report_coverage.py  test_validation_report_gen.py
