[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-governance"
version = "0.1.3"
description = "Unified model governance for UK insurance pricing: SS1/23-aligned validation and model risk management"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Burning Cost", email = "pricing.frontier@gmail.com" }
]
keywords = [
    "insurance",
    "model validation",
    "model risk management",
    "actuarial",
    "PRA",
    "FCA",
    "SS1/23",
    "MRM",
    "governance",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",

    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.10"
dependencies = [
    "polars>=1.0",
    "jinja2>=3.1.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "insurance-fairness>=0.1.0",
    "pdoc>=14.0.0",
]
shap = ["shap>=0.42.0"]

[project.urls]
Repository = "https://github.com/burning-cost/insurance-governance"
Issues = "https://github.com/burning-cost/insurance-governance/issues"
Documentation = "https://burning-cost.github.io/insurance-governance"

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_governance"]

[tool.hatch.build.targets.wheel.sources]
"src/insurance_governance/validation/templates" = "insurance_governance/validation/templates"

[tool.pytest.ini_options]
testpaths = ["tests"]
