[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-governance"
version = "0.1.6"
description = "Model risk management and SS1/23-aligned validation for UK insurance pricing: actuarial model governance, MRM reports, and PRA/FCA compliance"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Burning Cost", email = "pricing.frontier@gmail.com" }
]
keywords = [
    "insurance",
    "model validation",
    "model risk management",
    "actuarial",
    "PRA",
    "FCA",
    "SS1/23",
    "MRM",
    "governance",
    "pricing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Office/Business :: Financial",
]
requires-python = ">=3.10"
dependencies = [
    "polars>=1.0",
    "jinja2>=3.1.0",
    "scikit-learn>=1.3.0",
    "numpy>=2.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "insurance-fairness>=0.1.0",
    "pdoc>=14.0.0",
]
shap = ["shap>=0.42.0"]

[project.urls]
Homepage = "https://burning-cost.github.io/"
Repository = "https://github.com/burning-cost/insurance-governance"
Changelog = "https://github.com/burning-cost/insurance-governance/releases"
Documentation = "https://burning-cost.github.io/insurance-governance"
"Bug Tracker" = "https://github.com/burning-cost/insurance-governance/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_governance"]

[tool.hatch.build.targets.wheel.sources]
"src/insurance_governance/validation/templates" = "insurance_governance/validation/templates"

[tool.pytest.ini_options]
testpaths = ["tests"]
