[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-governance"
version = "0.3.1"
description = "Model risk management and governance packs for UK GI insurance pricing — Solvency II, PRA CP6/24, FCA Consumer Duty, and GIPP outcome testing."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Burning Cost", email = "pricing.frontier@gmail.com" }
]
keywords = [
    "insurance",
    "model validation",
    "model risk management",
    "MRM",
    "governance",
    "actuarial",
    "pricing",
    "UK",
    "personal lines",
    "PRA",
    "FCA",
    "Consumer Duty",
    "CP6/24",
    "Solvency II",
    "GIPP",
    "PRIN 2A",
    "PS22/9",
    "outcome testing",
    "IMOR",
    "explainability",
    "SHAP",
    "audit trail",
    "model documentation",
    "model inventory",
    "back-testing",
    "stress testing",
    "fair value",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "polars>=1.0",
    "jinja2>=3.1.0",
    "numpy>=2.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "insurance-fairness>=0.1.0",
    "pdoc>=14.0.0",
]
shap = ["shap>=0.42.0"]

[project.urls]
Homepage = "https://burning-cost.github.io/libraries/insurance-governance/"
Documentation = "https://burning-cost.github.io/libraries/insurance-governance/"
Repository = "https://github.com/burning-cost/insurance-governance"
"Bug Tracker" = "https://github.com/burning-cost/insurance-governance/issues"
Changelog = "https://github.com/burning-cost/insurance-governance/releases"

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_governance"]

[tool.hatch.build.targets.wheel.sources]
"src/insurance_governance/validation/templates" = "insurance_governance/validation/templates"
"src/insurance_governance/outcome/templates" = "insurance_governance/outcome/templates"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
]
